[package]
name = "tlru_cache"
version = "0.1.4"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Peter Lang <lang.peter.github@gmail.com>"]
description = "Time-Aware LRU Cache"
repository = "https://github.com/peter-lang/tlru-cache"
keywords = ["lru","cache","ttl","time-aware","expire"]

[dependencies]

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"]}
mock_instant = "0.5.1"
